# cc3166-rs

./: .gitignore  Cargo.toml  README.md
src/: a3.rs  error.rs  lib.rs  macros.rs  num.rs
src/attrs/: a2.rs  mod.rs
src/lang/: chinese.rs  english.rs  finnish.rs  french.rs  mod.rs  russian.rs  spanish.rs  swedish.rs  template.rs
